--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-unused-vars": "off",
     "no-console": "off",
     "react/prop-types": "off",
-    "react/button-has-type": "off"
+    "react/button-has-type": "off",
+    "react/no-array-index-key":"off"
   }
 }
