--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.2",
+    "react-mobile-style-picker": "^1.0.1",
     "react-query": "^3.32.1",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
